2002-12-31  Tom Tromey  <tromey@redhat.com>             Ranjit Mathew  <rmathew@hotmail.com>

Fix for PR libgcj/8997:
	* java/lang/natObject.cc (spin): Use _Jv_platform_usleep.
	Include platform.h.
	* include/posix.h (_Jv_platform_usleep): New function.
	* include/win32.h (_Jv_platform_usleep): New function.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@60700 138bc75d-0d04-0410-961f-82ee72b054a4